src/test/ui/union/union-move.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/union-move.rs:26:18
   |
LL | fn test1(x: U1) {
   |          - move occurs because `x` has type `U1`, which does not implement the `Copy` trait
...
LL |         move_out(x.f1_nocopy);
   |                  ----------- value moved here
LL |         move_out(x.f2_nocopy);
   |                  ^^^^^^^^^^^ value used here after move

error[E0382]: use of moved value: `x`
  --> $DIR/union-move.rs:42:18
   |
LL | fn test3(x: U1) {
   |          - move occurs because `x` has type `U1`, which does not implement the `Copy` trait
...
LL |         move_out(x.f2_nocopy);
   |                  ----------- value moved here
LL |         move_out(x.f3_copy);
   |                  ^^^^^^^^^ value used here after move

error[E0509]: cannot move out of type `U2`, which implements the `Drop` trait
  --> $DIR/union-move.rs:49:18
   |
LL |         move_out(x.f1_nocopy);
   |                  ^^^^^^^^^^^
   |                  |
   |                  cannot move out of here
   |                  move occurs because `x.f1_nocopy` has type `RefCell<i32>`, which does not implement the `Copy` trait

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0382, E0509.
For more information about an error, try `rustc --explain E0382`.
